# mr-bridge

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.json  config.example.toml  docker-compose.yml
.github/workflows/: ci-publish.yml
src/: lib.rs  main.rs
